; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_macjoy.c_joy_find_elements.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_macjoy.c_joy_find_elements.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@kIOHIDElementKey = common dso_local global i32 0, align 4
@joy_elem_array_hnd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @joy_find_elements to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @joy_find_elements(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @kIOHIDElementKey, align 4
  %10 = call i32 @CFSTR(i32 %9)
  %11 = call i32 @CFDictionaryGetValue(i32 %8, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i64 @CFGetTypeID(i32 %14)
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i64 (...) @CFArrayGetTypeID()
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %30

19:                                               ; preds = %13
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i32 0, i32* %20, align 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @CFArrayGetCount(i32 %22)
  store i32 %23, i32* %21, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32*, i32** %4, align 8
  %26 = bitcast i32* %25 to i8*
  %27 = bitcast %struct.TYPE_3__* %7 to i64*
  %28 = load i64, i64* %27, align 4
  %29 = call i32 @CFArrayApplyFunction(i32 %24, i64 %28, i32* @joy_elem_array_hnd, i8* %26)
  br label %30

30:                                               ; preds = %19, %13
  br label %31

31:                                               ; preds = %30, %2
  ret void
}

declare dso_local i32 @CFDictionaryGetValue(i32, i32) #1

declare dso_local i32 @CFSTR(i32) #1

declare dso_local i64 @CFGetTypeID(i32) #1

declare dso_local i64 @CFArrayGetTypeID(...) #1

declare dso_local i32 @CFArrayGetCount(i32) #1

declare dso_local i32 @CFArrayApplyFunction(i32, i64, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
